--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <section id="capa">
                 <h1 id="titulo"></h1>
                 <h1 id="titulo2"></h1>
+                <button id="mais"></button>
             </section>
             <section id="info">
                 <h2 id="sobre"></h2>
