--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <title>Britney|Fã</title>
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-
-        <title>
-
-
-        </title>
         <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 
     </head>
@@ -19,7 +15,7 @@
             <section id="capa">
                 <h1 id="titulo"></h1>
                 <h1 id="titulo2"></h1>
-                <button id="mais"></button>
+                <a href="" id="link" target="_blank"><button id="mais"></button></a>
             </section>
             <section id="info">
                 <h2 id="sobre"></h2>
@@ -57,30 +53,26 @@
                         <img src="" alt="" id="musica">
                         <h3 id="h3"></h3>
                         <p id="data"></p>
-                        <button id="assistir"></button>
+                        <a href="" id="link1" target="_blank"><button id="assistir"></button></a>
                     </div>
                     <div class="melhores">
                         <img src="" alt="" id="musica2" />
                         <h3 id="toxie"></h3>
                         <p id="data2"></p>
-                        <button id="assistir2"></button>
+                        <a href="" id="link2" target="_blank"><button id="assistir2"></button></a>
                     </div>
                     <div class="melhores">
                         <img src="" alt="" id="musica3" />
                         <h3 id="oops"></h3>
                         <p id="data3"></p>
-                        <button id="assistir3"></button>
+                        <a href="" id="link3" target="_blank"><button id="assistir3"></button></a>
                     </div>
                 </div>
             </section>    
         </main>
-
-
         <footer>
-
+            <h3 id="final"></h3>
         </footer>
-
-
         <script src="js.js"></script>
     </body>
 </html>
